# simpleos

./: .env.appstore.example  .env.macos.example  .gitignore  .gitpod.yml  .npmrc  .pnp.cjs  .travis.yml  CLAUDE.md  DESIGN_SPEC.md  LICENSE.txt  README.md  ROADMAP.md  angular.json  build-liberland.js  build-simpleos.js  claim-rewards.js  config.json  dev-app-update.yml  electron-builder.json  error.json  index.js  latest.json  native.js  package-lock.json  package.json  package.json.bak  package2.json  patch.js  postinstall.js  tsconfig-serve.json  tsconfig.app.json  tsconfig.json  tsconfig.serve.json  tsconfig.spec.json  tslint.json
.github/workflows/: ci.yml
app/: main.js  main.js.map  main.ts  package-lock.json  package.json  tsconfig.json  util.js  util.js.map  util.ts
app/leap/: KeyConversions.js  KeyConversions.js.map  PrivateKey.ts  PublicKey.js  Signature.js.map
app/modules/: claim-rewards.js  claim-rewards.js.map  claim-rewards.ts  ledger-manager.js  ledger-manager.js.map  ledger-manager.ts  local-config-storage.js  local-config-storage.js.map  local-config-storage.ts  simpleos-connect.js  simpleos-connect.js.map  simpleos-connect.ts  transit-api.js  transit-api.js.map  transit-api.ts
configurations/: build-liberland.js  build-simpleos.js
docs/: biometric-platform-support.md  macos-app-store.md  macos-packaging.md
e2e/src/: app.e2e-spec.js.map  app.e2e-spec.ts  app.po.js.map
electron_modules/: claim-rewards.js  ledger-manager.js  local-config-storage.js  simpleos-connect.js  transit-api.js  util.js
ng-dist/: 3rdpartylicenses.txt  fa-brands-400.eot  fa-light-300.eot  fa-regular-400.eot  fa-solid-900.eot  index.html  main.js  polyfills.js  scripts.js  styles.css  vendor.js
ng-dist/assets/: eos.js  maintenance_anim2.json
scripts/: entitlements.mac.plist  macos-appstore-local-build.sh  macos-appstore-package.sh  macos-install-local.sh  macos-package.sh  patch.js  postinstall.js  tauri-dev.js  with-supported-node.js  with-supported-node.sh
src/: config.js  config.js.map  config.ts  error.js  error.js.map  error.ts  index.html  index.js  main.js  main.js.map  main.ts  polyfills.js  polyfills.js.map  polyfills.ts  styles.css  test.css  test.js  test.js.map  tsconfig.app.json  tsconfig.spec.json
src-tauri/: Cargo.toml  entitlements.appstore-local.plist  entitlements.appstore.plist  tauri.appstore-local.conf.json  tauri.appstore.conf.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: biometric.rs  error.rs  lib.rs  main.rs  tray.rs  util.rs
src-tauri/src/antelope/: abi_serializer.rs  bls.rs  chain_config.rs  discovery.rs  mod.rs  powerup.rs  provider.rs  rpc.rs  sealed_message.rs  serialize.rs  signing.rs  transaction.rs  types.rs
src-tauri/src/commands/: anchor.rs  chain.rs  config.rs  dapp.rs  ledger.rs  mod.rs  network.rs  session.rs  tray.rs  wallet.rs
src-tauri/src/keystore/: anchor_crypto.rs  anchor_import.rs  derive.rs  memory.rs  mod.rs  os_keyring.rs  store.rs  wallet.rs
src-tauri/src/ledger/: mod.rs  protocol.rs  transport.rs
src-tauri/tests/: e2e_signing.rs  e2e_wallet.rs
src-tauri/tests/common/: mod.rs
src/app/: accounts.service.js  accounts.service.js.map  accounts.service.spec.ts  accounts.service.ts  app-routing.module.js  app-routing.module.js.map  app-routing.module.ts  app.component.css  app.component.html  app.component.js  app.component.js.map  app.component.spec.ts  app.component.ts  app.module.js  app.module.js.map  app.module.ts  app.routes.ts  app.spec.ts  app.ts  chains.js  chains.js.map  chains.ts  config.json  eosjs.service.js  eosjs.service.js.map  eosjs.service.spec.ts  eosjs.service.ts  lock.guard.js  lock.guard.js.map  lock.guard.spec.ts  lock.guard.ts  network.service.js  network.service.js.map  network.service.spec.ts  network.service.ts  validation.service.spec.ts  validation.service.ts
src/assets/: eos.js
tests/e2e/: .env  (+3 more)
v1/: config.json  error.json  index.js  tsconfig.app.json
(+358 files in other folders)
